2009-08-05  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneCommands.cs: If no project is selected, deploy to the
	  startup project.

2009-08-05  Michael Hutchinson  <mhutchinson@novell.com>

	* Keychain.cs: Fix NRE when not using custom keys.

2009-08-04  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneSigningKeyPanel.cs: Only remove value if it exists
	  in userprefs.

2009-08-04  Michael Hutchinson  <mhutchinson@novell.com>

	* Icons:
	* Icons/iPhone.svgz:
	* Icons/iphone-22.png:
	* Icons/iphone-16.png:
	* Icons/iphone-32.png:
	* Icons/iPhone-22.svgz:
	* MonoDevelop.IPhone.csproj:
	* MonoDevelop.IPhone.addin.xml:
	* Templates/IPhoneProject.xpt.xml:
	* Icons/iphone-project-overlay.png:
	* Templates/IPhoneProjectEmpty.xpt.xml: Add icons.

2009-08-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Don't overwrite keys that are
	  already in the plist template.

2009-08-04  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneProject.cs:
	* gtk-gui/gui.stetic:
	* IPhoneBuildExtension.cs:
	* Gui/IPhoneOptionsPanel.cs:
	* gtk-gui/MonoDevelop.IPhone.Gui.IPhoneOptionsPanelWidget.cs:
	  Add options for display name and bundle identifier.

2009-08-03  Michael Hutchinson  <mhutchinson@novell.com>

	* Gui/IPhoneOptionsPanel.cs: Make icon picker choose pngs.

2009-08-03  Michael Hutchinson  <mhutchinson@novell.com>

	* CodeBehind.cs:
	* CodeBehindGenerator.cs:
	* MonoDevelop.IPhone.csproj: Move the codebehind generator
	  into a class without dependencies on other parts of MD, so
	  it can be re-used by a standalone tool.

2009-08-03  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneFrameworkBackend.cs: Track core API.

2009-08-02  Michael Hutchinson  <mhutchinson@novell.com>

	* IPhoneBuildExtension.cs: Don't change content files' 
	  extension to .nib.

2009-08-01  Michael Hutchinson  <mhutchinson@novell.com>

	* Templates/IPhoneApplicationXib.xft.xml: Fix casing in C# code.
